新增 yahoo finance 動態爬蟲程式碼

--- a/爬蟲/動態爬蟲 ( Selenium )/pchome 等購物網站抓取資料/code.ipynb
+++ b/爬蟲/動態爬蟲 ( Selenium )/pchome 等購物網站抓取資料/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "171c76f6",
    "metadata": {},
    "outputs": [
@@ -10,106 +10,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "陰翳禮讚：侘寂美學的極致書寫，谷崎潤一郎淬鍊日式底蘊隨筆代表作（珍藏紀念版）(精裝)\n",
-      "300\n",
-      "多功能水管衛浴扳手\n",
-      "165\n",
-      "《新篇章咖啡》咖啡豆｜醇厚調性 狂想曲 225g\n",
-      "330\n",
-      "IBILI 三槽不沾法國麵包烤盤\n",
-      "780\n",
-      "【英國Antiquax】銅油 200ml\n",
-      "360\n",
-      "《龍口》口味粉絲(300g)\n",
-      "95\n",
-      "Carman’s | 大豆蛋白棒\n",
-      "179\n",
-      "【ADERIA】日本進口抗菌密封扣環保存玻璃罐750ml\n",
-      "449\n",
-      "SP 廣穎 32GB LuxMini 320 USB 2.0 隨身碟 白色\n",
-      "114\n",
-      "【PONYKASEI】日本製可收縮兩用曬衣架(2入組)\n",
-      "229\n",
-      "電工三進三出彩色快速接線端子10入組\n",
-      "188\n",
-      "HADER LED臥室觸控柔光護眼小夜燈 起夜伴睡哺乳氛圍燈 暖光燈 床頭燈 檯燈\n",
-      "399\n",
-      "比基尼妮.莎莎短袖雙色二件式泳裙泳衣泳裝(M-3L)\n",
-      "1400\n",
-      "【MUJI 無印良品】髮圈/細.黑.3個\n",
-      "80\n",
-      "【MUJI 無印良品】手動削鉛筆機/小.淺灰\n",
-      "199\n",
-      "【MUJI 無印良品】攜帶式海綿香皂盤．替換海綿/2入\n",
-      "39\n",
-      "SUNLY 方圓磁吸居家針線盒 便攜縫紉工具 針線包\n",
-      "459\n",
-      "韓國不倒翁-辛辣拉麵(120g*5入)\n",
-      "215\n",
-      "【WIDE VIEW】槍灰色PVC銀離子五層防爆軟管2M(003-2M)\n",
-      "279\n",
-      "再生聚酯速乾床包/Q/粉紅\n",
-      "790\n",
-      "【視鼎Z-POLS 新一代運動款】質感帥氣霧白 搭載頂級Polarized強抗UV400偏光運動眼鏡！\n",
-      "899\n",
-      "【輕旅人】乾燥飯法式巧達起司田園風味(100g)\n",
+      "LP iPhone7 全方位防水/雪/震/泥 保護殼-Fre(淺綠)\n",
+      "599\n",
+      "【iPhone 7/8 Plus】防撞透明太空殼手機殼 保護套 防摔防刮保護殼\n",
+      "290\n",
+      "【OtterBox】iPhone 16 Pro 6.3吋 Defender XT 防禦者系列保護殼-黑透(支援MagSafe)\n",
+      "1938\n",
+      "【OtterBox】iPhone 16 Pro 6.3吋 Defender XT 防禦者系列保護殼-藍透(支援MagSafe)\n",
+      "1860\n",
+      "【OtterBox】iPhone 15 6.1吋 Defender 防禦者系列保護殼(黑)\n",
+      "1410\n",
+      "MINIQ 立夾式涼夏桌面電風扇 可磁吸/壁掛 360°全方位吹風 三檔風速 嬰兒車充電扇 (附壁掛貼片)\n",
+      "599\n",
+      "DUX DUCIS SAMSUNG S25 SKIN Pro 皮套\n",
+      "320\n",
+      "SP 廣穎 256GB B32 USB 3.2 Gen 1 隨身碟\n",
+      "499\n",
+      "茂喜進口嚴選商品-爆米花(非基因改造)600g/包\n",
       "89\n",
-      "【AHOYE】長柄矽膠雙面刷頭按摩沐浴刷 (洗澡刷 搓澡刷 刷背 長柄刷)\n",
+      "【OtterBox】iPhone 15 Pro Max 6.7吋 Symmetry Plus 炫彩幾何保護殼-黑(支援MagSafe)\n",
+      "1210\n",
+      "【馬來西亞游建好】肉骨茶-片裝\n",
+      "108\n",
+      "NILLKIN SAMSUNG Z Fold 6 5G 磨砂護盾 Fold 磁吸保護殼\n",
+      "990\n",
+      "NILLKIN OPPO Find N3 磨砂護盾 Prop 保護殼\n",
+      "850\n",
+      "【液態矽膠殼】iPhone 15 Pro 手機殼 i15 Pro 保護殼 矽膠 軟殼 (紅)\n",
+      "490\n",
+      "鐵三角 ATH-M30x 專業監聽 耳罩式耳機 音質清晰\n",
+      "2500\n",
+      "【OtterBox】iPhone 16 Pro Max 6.9吋 Symmetry 炫彩幾何保護殼-透(附相機控制感應)\n",
+      "1697\n",
+      "Edelkrone Tilt Module for HeadONE v4 電控雲台專用L支架\n",
+      "4930\n",
+      "【OtterBox】iPhone 16 6.1吋 Defender XT 防禦者系列保護殼-黑透(支援MagSafe)\n",
+      "1860\n",
+      "CANON EOS R50 V + RF-S14-30mm f/4-6.3 IS STM PZ 黑色 公司貨\n",
+      "27900\n",
+      "OB iPhone 11 Pro Commuter通勤者系列保護殼-黑\n",
+      "199\n",
+      "超級SP大口吃鮮肉罐 400gx24入\n",
+      "830\n",
+      "NILLKIN 小米 15 5G 冰空 Prop 磁吸保護殼(鏡框)\n",
+      "650\n",
+      "【DIBOTE迪伯特】高強度鋁合金直柄三節式登山杖 (236) - 藍\n",
+      "289\n",
+      "【味榮】原生昆布65g\n",
+      "105\n",
+      "【DIBOTE迪伯特】高強度鋁合金 彎柄三節式登山杖 (237) - 銀\n",
+      "289\n",
+      "【Kworld 廣寰】入耳式電競音樂耳麥777\n",
+      "69\n",
+      "【Body Goals】多效乳清蛋白飲-咖啡拿鐵口味 隨手包12入組(31g/包，12包/盒)\n",
+      "508\n",
+      "UIBI 20W 迷你快充 (莫蘭粉）\n",
+      "560\n",
+      "【Farmina 法米納】N&D 天然熱帶水果系列（FTD）犬用 1.5kg (狗飼料)\n",
+      "760\n",
+      "Kingston 金士頓 NV3 2TB M.2 2230 NVMe SSD 固態硬碟 (SNV3SM3/2T0)\n",
+      "3528\n",
+      "澳佳寶Blackmores陽光 維生素D3 400IU(90顆)\n",
+      "539\n",
+      "日本 Skater PDSH5 吸管水壺專用配件480ml(8127)\n",
+      "159\n",
+      "賓漢針織平口褲(紅色3入)\n",
       "299\n",
-      "【iPhone 13 Pro】鋼化膜 保護貼 i13 Pro 保護膜 玻璃貼 手機保護貼膜\n",
-      "399\n",
-      "【Cap】水龍頭掛式水管收納架\n",
-      "139\n",
-      "【米森 vilson】無加糖分離乳清蛋白飲-紫心地瓜 (40gx6包/盒)\n",
-      "366\n",
-      "喂，怎麼煮得這麼好吃！從蒜味蝦仁飯到香辣乾鍋雞，從刺客義大利麵到麻婆豆腐燉蛋，魏魏主廚讓家常料理\n",
-      "356\n",
-      "Canon RF 135mm F1.8L IS USM 公司貨\n",
-      "57000\n",
-      "【名廚美饌】高麗菜十榖粥(40gx6入)\n",
-      "279\n",
-      "上智關廟麵900g\n",
-      "99\n",
-      "中興米日本越光米(CNS一等米) 1.5kg\n",
-      "188\n",
-      "【Ringke】Google Pixel 9a [Onyx] 防撞緩衝手機保護殼\n",
-      "550\n",
-      "桌上木製印章盒/中\n",
-      "310\n",
-      "義美生醫 W PROTEIN JUNIOR成長期乳清蛋白飲-巧克力牛奶(35g*10包/盒)\n",
-      "400\n",
-      "【Cap】可伸縮櫥櫃分層置物架\n",
-      "299\n",
-      "日清馬克杯麵-雞汁醬油風味&海鮮風味 94g\n",
-      "118\n",
-      "日清大杯麵-醬油風味 101G\n",
-      "110\n",
-      "舒適絨毛 USB可插手暖宮腰帶(三檔調溫/附USB延長線)-灰色\n",
-      "599\n",
-      "貝立海靜音雙孔微調打氣馬達MA-1000\n",
-      "640\n",
-      "呼吸系列通風扇-B9013N\n",
-      "469\n",
-      "aibo 多功能可拆式 60cm桌立/懸掛/磁吸LED檯燈(USB充電)\n",
-      "899\n",
-      "棉凹凸織床包/S/綠色條紋\n",
-      "790\n",
-      "EXCELSA 不鏽鋼餐叉3入\n",
-      "401\n",
-      "【Ringke】三星 Galaxy A56 / A36 [Easy Slide Tempered Glass] 鋼化玻璃螢幕保護貼2入（附安裝工具）\n",
-      "550\n",
-      "懸臂式伸縮款懶人平板手機落地支架(RA-736)\n",
-      "599\n",
-      "韓國味付海苔(橄欖油入) 5g×12\n",
-      "119\n",
-      "【Diptyque】淡香精 75ml 多款任選\n",
-      "4299\n",
-      "家樂氏 纖穀脆-任選口味\n",
+      "【Farmina 法米納】N&D 天然頂級無榖系列（GC）貓用 1.5kg (貓飼料)\n",
+      "1196\n",
+      "象印*4公升* SuperVE真空省電微電腦電動熱水瓶(CV-WFF40)\n",
+      "4990\n",
+      "《廣吉》咖啡豆(口味多選/包)(454g)\n",
       "229\n",
-      "好麗友 預感香烤洋芋片64g(口味多選/盒)\n",
-      "39\n",
-      "DELL Inspiron 13-5330N-R3808STW 銀河星跡(Intel Core Ultra 7 155H/16G/1TB/W11/QHD+/13.3)\n",
-      "37688\n"
+      "【泡舒】泡舒洗潔精1000g (綠茶去油除腥,檸檬去味清新,小蘇打三款任選)\n",
+      "86\n",
+      "【Sanhuo】參活免安裝設計便攜式無線洗衣機/洗衣杯(內衣褲/襪子專用)\n",
+      "1290\n",
+      "Apple Watch SE GPS 40 mm銀色鋁製錶殼\n",
+      "7900\n",
+      "【WIDE VIEW】LED泛/聚光多功能頭燈(NZL-1804-A)\n",
+      "449\n",
+      "iMac 24 吋 4.5K Retina 顯示器 M4 晶片配備 8 核心 CPU8 核心 GPU 與 16 核心 16GB 記憶體 256GB SSD\n",
+      "44900\n",
+      "SIGMA 28-70mm F2.8 DG DN Contemporary 公司貨\n",
+      "20490\n",
+      "西雅圖 濃淬咖啡球(口味任選/盒)\n",
+      "469\n",
+      "Canon RF-S 55-210mm F5-7.1 IS STM (平輸-白盒)\n",
+      "9590\n",
+      "SP 廣穎 64GB Ultima II I-Series USB 2.0 隨身碟 綠\n",
+      "135\n",
+      "Mac mini Apple M4 晶片配備 10 核心 CPU、10 核心 GPU、16 核心 24GB記憶體 512GB SSD\n",
+      "33900\n",
+      "OB+POP iPhone 11 Symmetry 炫彩幾何泡泡騷保護殼-紫\n",
+      "399\n",
+      "MAGEASY 2024 iPhone, 三鏡頭, 大尺寸, Odyssey 超軍規防摔手機殼\n",
+      "490\n",
+      "【iPhone 12 Pro Max】防撞透明太空殼手機殼 保護套 防摔防刮保護殼\n",
+      "290\n",
+      "雷達 超智慧薄型液體電蚊香器 (1機+41ml×1瓶) 三款任選\n",
+      "199\n"
      ]
     }
    ],
@@ -118,12 +118,15 @@
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
+    "import pandas\n",
     "\n",
     "driver = webdriver.Chrome()\n",
     "\n",
     "driver.get(\"https://24h.pchome.com.tw/replenish/\")\n",
     "\n",
     "content = driver.find_elements(By.CSS_SELECTOR,\"#ItemContainer > dd\")\n",
+    "\n",
+    "dataset = []\n",
     "\n",
     "for item in content : \n",
     "\n",
@@ -133,7 +136,20 @@
     "\n",
     "    price = int(item.find_element(By.CSS_SELECTOR,\"ul > li > a > span > span\").text)\n",
     "\n",
-    "    print(price)\n"
+    "    print(price)\n",
+    "\n",
+    "    data = {\n",
+    "\n",
+    "        \"商品名稱\" : title,\n",
+    "        \"價格\" : price\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    dataset.append(data)\n",
+    "\n",
+    "result = pandas.DataFrame(dataset)\n",
+    "\n",
+    "result.to_csv(\"output.csv\",index=False)\n"
    ]
   },
   {
@@ -224,16 +240,16 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "Lydsto 骨傳導藍牙耳機 骨傳導耳機 32G大容量內存 運動耳機 可游泳\n",
+      "Logitech 羅技 G733 無線RGB炫光電競耳麥(極光白)\n",
+      "Logitech 羅技 G733 無線RGB炫光電競耳麥(神秘黑)\n",
+      "Logitech 羅技 G G735 無線美型RGB遊戲耳麥 - 夢幻白\n",
+      "Logitech 羅技 G Pro X 2 LIGHTSPEED無線電競耳麥 - 白\n",
+      "Logitech 羅技 G733 無線RGB炫光電競耳麥(炫光藍)\n",
       "Xiaomi 小米 Redmi Buds 6 Lite 藍牙耳機\n",
       "Xiaomi 小米 Redmi Buds 6 藍牙耳機\n",
       "PHILIPS 飛利浦 City系列 TAH5205 藍牙耳罩式耳機\n",
       "Xiaomi 小米 Type-C 耳機\n",
-      "HyperX Cloud Stinger Core 無線電競耳機(4P5J1AA)\n",
-      "PHILIPS 飛利浦 TAH7508 降噪藍牙耳罩式耳機 + TAT3508 主動降噪真無線藍牙耳機\n",
-      "Apple 蘋果 EarPods 具備 USB-C 耳機接頭\n",
-      "Xiaomi 小米 Redmi Buds 6 Pro 藍牙耳機\n",
-      "Bose QuietComfort Ultra 消噪耳機 黑色 藍牙耳罩耳機\n"
+      "PHILIPS 飛利浦 TAH7508 降噪藍牙耳罩式耳機 + TAT3508 主動降噪真無線藍牙耳機\n"
      ]
     }
    ],
@@ -277,9 +293,7 @@
     "\n",
     "result = pandas.DataFrame(data)\n",
     "\n",
-    "result.to_csv(\"output.csv\",index=False)\n",
-    "\n",
-    "\n"
+    "result.to_csv(\"output_2.csv\",index=False)\n"
    ]
   }
  ],
