修正動態爬蟲程式碼

--- a/爬蟲/動態爬蟲 ( Selenium )/yahoo finance 抓取 SPY 資料/code.ipynb
+++ b/爬蟲/動態爬蟲 ( Selenium )/yahoo finance 抓取 SPY 資料/code.ipynb
@@ -2,28 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dbc04fa5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Index(...) must be called with a collection of some kind, False was passed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 40\u001b[0m\n\u001b[0;32m     36\u001b[0m     row \u001b[38;5;241m=\u001b[39m item\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m     38\u001b[0m     data\u001b[38;5;241m.\u001b[39mappend(row)\n\u001b[1;32m---> 40\u001b[0m result \u001b[38;5;241m=\u001b[39m pandas\u001b[38;5;241m.\u001b[39mDataFrame(data , columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     42\u001b[0m result\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myahoo_finance_output.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m,index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:867\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    859\u001b[0m         mgr \u001b[38;5;241m=\u001b[39m arrays_to_mgr(\n\u001b[0;32m    860\u001b[0m             arrays,\n\u001b[0;32m    861\u001b[0m             columns,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    864\u001b[0m             typ\u001b[38;5;241m=\u001b[39mmanager,\n\u001b[0;32m    865\u001b[0m         )\n\u001b[0;32m    866\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 867\u001b[0m         mgr \u001b[38;5;241m=\u001b[39m ndarray_to_mgr(\n\u001b[0;32m    868\u001b[0m             data,\n\u001b[0;32m    869\u001b[0m             index,\n\u001b[0;32m    870\u001b[0m             columns,\n\u001b[0;32m    871\u001b[0m             dtype\u001b[38;5;241m=\u001b[39mdtype,\n\u001b[0;32m    872\u001b[0m             copy\u001b[38;5;241m=\u001b[39mcopy,\n\u001b[0;32m    873\u001b[0m             typ\u001b[38;5;241m=\u001b[39mmanager,\n\u001b[0;32m    874\u001b[0m         )\n\u001b[0;32m    875\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    876\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m dict_to_mgr(\n\u001b[0;32m    877\u001b[0m         {},\n\u001b[0;32m    878\u001b[0m         index,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    881\u001b[0m         typ\u001b[38;5;241m=\u001b[39mmanager,\n\u001b[0;32m    882\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:332\u001b[0m, in \u001b[0;36mndarray_to_mgr\u001b[1;34m(values, index, columns, dtype, copy, typ)\u001b[0m\n\u001b[0;32m    323\u001b[0m     values \u001b[38;5;241m=\u001b[39m sanitize_array(\n\u001b[0;32m    324\u001b[0m         values,\n\u001b[0;32m    325\u001b[0m         \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    328\u001b[0m         allow_2d\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    329\u001b[0m     )\n\u001b[0;32m    331\u001b[0m \u001b[38;5;66;03m# _prep_ndarraylike ensures that values.ndim == 2 at this point\u001b[39;00m\n\u001b[1;32m--> 332\u001b[0m index, columns \u001b[38;5;241m=\u001b[39m _get_axes(\n\u001b[0;32m    333\u001b[0m     values\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], values\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], index\u001b[38;5;241m=\u001b[39mindex, columns\u001b[38;5;241m=\u001b[39mcolumns\n\u001b[0;32m    334\u001b[0m )\n\u001b[0;32m    336\u001b[0m _check_values_indices_shape_match(values, index, columns)\n\u001b[0;32m    338\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m typ \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marray\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
-      "File \u001b[1;32mc:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:756\u001b[0m, in \u001b[0;36m_get_axes\u001b[1;34m(N, K, index, columns)\u001b[0m\n\u001b[0;32m    754\u001b[0m     columns \u001b[38;5;241m=\u001b[39m default_index(K)\n\u001b[0;32m    755\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 756\u001b[0m     columns \u001b[38;5;241m=\u001b[39m ensure_index(columns)\n\u001b[0;32m    757\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m index, columns\n",
-      "File \u001b[1;32mc:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:7649\u001b[0m, in \u001b[0;36mensure_index\u001b[1;34m(index_like, copy)\u001b[0m\n\u001b[0;32m   7647\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m Index(index_like, copy\u001b[38;5;241m=\u001b[39mcopy, tupleize_cols\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m   7648\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 7649\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Index(index_like, copy\u001b[38;5;241m=\u001b[39mcopy)\n",
-      "File \u001b[1;32mc:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:526\u001b[0m, in \u001b[0;36mIndex.__new__\u001b[1;34m(cls, data, dtype, copy, name, tupleize_cols)\u001b[0m\n\u001b[0;32m    523\u001b[0m         data \u001b[38;5;241m=\u001b[39m com\u001b[38;5;241m.\u001b[39masarray_tuplesafe(data, dtype\u001b[38;5;241m=\u001b[39m_dtype_obj)\n\u001b[0;32m    525\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_scalar(data):\n\u001b[1;32m--> 526\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_raise_scalar_data_error(data)\n\u001b[0;32m    527\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(data, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__array__\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    528\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m(np\u001b[38;5;241m.\u001b[39masarray(data), dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39mcopy, name\u001b[38;5;241m=\u001b[39mname)\n",
-      "File \u001b[1;32mc:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:5289\u001b[0m, in \u001b[0;36mIndex._raise_scalar_data_error\u001b[1;34m(cls, data)\u001b[0m\n\u001b[0;32m   5284\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[0;32m   5285\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[0;32m   5286\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_raise_scalar_data_error\u001b[39m(\u001b[38;5;28mcls\u001b[39m, data):\n\u001b[0;32m   5287\u001b[0m     \u001b[38;5;66;03m# We return the TypeError so that we can raise it from the constructor\u001b[39;00m\n\u001b[0;32m   5288\u001b[0m     \u001b[38;5;66;03m#  in order to keep mypy happy\u001b[39;00m\n\u001b[1;32m-> 5289\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[0;32m   5290\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m(...) must be called with a collection of some \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   5291\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkind, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mrepr\u001b[39m(data)\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01mnot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28misinstance\u001b[39m(data,\u001b[38;5;250m \u001b[39mnp\u001b[38;5;241m.\u001b[39mgeneric)\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28mstr\u001b[39m(data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   5292\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwas passed\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   5293\u001b[0m     )\n",
-      "\u001b[1;31mTypeError\u001b[0m: Index(...) must be called with a collection of some kind, False was passed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 利用 selenium 的 sendkeys 和 click 來抓取 yahoo finance 上的 S&P 500 ETF 每日價格資料\n",
     "\n",
@@ -50,9 +32,8 @@
     "target_2.click()\n",
     "\n",
     "wait_2 = WebDriverWait(driver,300)\n",
-    "wait_2.until(expected_conditions.presence_of_element_located((By.TAG_NAME,\"table\")))\n",
     "\n",
-    "table = driver.find_element(By.TAG_NAME,\"table\")\n",
+    "table = wait_2.until(expected_conditions.visibility_of_element_located((By.TAG_NAME,\"table\")))\n",
     "\n",
     "tr = table.find_elements(By.TAG_NAME,\"tr\")\n",
     "\n",
@@ -77,6 +58,7 @@
    "outputs": [],
    "source": [
     "# 較複雜版本，區分表格欄位和表格資料，但很常在 .text 轉換部分出錯，且表格欄位名稱抓不到\n",
+    "# 後來改用 visibility of element located 來抓取 table 修正\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
@@ -93,61 +75,50 @@
     "\n",
     "target.send_keys(\"SPY\" + Keys.RETURN)\n",
     "\n",
-    "wait = WebDriverWait(driver,300)\n",
+    "wait = WebDriverWait(driver,10)\n",
     "wait.until(expected_conditions.presence_of_element_located((By.LINK_TEXT,\"Historical Data\")))\n",
     "\n",
     "target_2 = driver.find_element(By.LINK_TEXT,\"Historical Data\")\n",
     "\n",
     "target_2.click()\n",
     "\n",
-    "wait_2 = WebDriverWait(driver,300)\n",
-    "wait_2.until(expected_conditions.presence_of_element_located((By.TAG_NAME,\"table\")))\n",
+    "wait_2 = WebDriverWait(driver,10)\n",
     "\n",
-    "table = driver.find_element(By.TAG_NAME,\"table\")\n",
+    "table = wait_2.until(expected_conditions.visibility_of_element_located((By.TAG_NAME,\"table\")))\n",
     "\n",
-    "# th = table.find_elements(By.TAG_NAME,\"th\")\n",
-    "\n",
-    "# data_th = []\n",
-    "\n",
-    "# for item in th : \n",
-    "\n",
-    "#     row_th = item.text\n",
-    "\n",
-    "#     data_th.append(row_th)\n",
-    "\n",
-    "# print(len(th))\n",
-    "\n",
-    "tr = table.find_elements(By.TAG_NAME,\"tr\")\n",
+    "tr_rows = table.find_elements(By.TAG_NAME,\"tr\")\n",
     "\n",
     "data = []\n",
     "\n",
-    "th_data = []\n",
+    "for row in tr_rows : \n",
     "\n",
-    "for row in tr : \n",
+    "    th_rows = row.find_elements(By.TAG_NAME,\"th\")\n",
     "\n",
-    "    th_cells = row.find_elements(By.TAG_NAME,\"th\")\n",
+    "    if th_rows : \n",
     "\n",
-    "    if th_cells : \n",
+    "        th_data = []\n",
     "\n",
-    "        for th_cell in th_cells : \n",
+    "        for th_cell in th_rows : \n",
     "\n",
     "            data_th_cell = th_cell.text\n",
     "\n",
     "            th_data.append(data_th_cell)\n",
     "\n",
-    "    cells = row.find_elements(By.TAG_NAME,\"td\")\n",
+    "        data.append(th_data)\n",
     "\n",
-    "    data_row = []\n",
+    "    td_rows = row.find_elements(By.TAG_NAME,\"td\")\n",
     "\n",
-    "    if cells : \n",
-    "    \n",
-    "        for cell in cells : \n",
+    "    if td_rows : \n",
     "\n",
-    "            data_cell = cell.text\n",
+    "        td_data = []\n",
     "\n",
-    "            data_row.append(data_cell)\n",
+    "        for td_cell in td_rows : \n",
+    "            \n",
+    "            data_td_cell = td_cell.text\n",
     "\n",
-    "    data.append(data_row)\n",
+    "            td_data.append(data_td_cell)\n",
+    "\n",
+    "        data.append(td_data)\n",
     "\n",
     "result = pandas.DataFrame(data)\n",
     "\n",
