--- a/爬蟲/動態爬蟲 ( Selenium )/證交所每日前20大交易資料抓取/code.ipynb
+++ b/爬蟲/動態爬蟲 ( Selenium )/證交所每日前20大交易資料抓取/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5658fb3e",
    "metadata": {},
    "outputs": [
@@ -10,28 +10,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                    0\n",
-      "0   排名 證券代號 證券名稱 成交股數 成交筆數 開盤價 最高價 最低價 收盤價 漲跌(+/-)...\n",
-      "1   1 1802 台玻 258,815,942 80,459 23.65 25.50 23.50...\n",
-      "2   2 1303 南亞 147,581,228 61,089 39.80 41.70 39.45...\n",
-      "3   3 8021 尖點 103,394,657 60,008 61.90 69.00 61.80...\n",
-      "4   4 0050 元大台灣50 103,281,333 89,437 50.80 51.20 5...\n",
-      "5   5 1504 東元 96,068,632 45,135 54.40 56.10 53.80 ...\n",
-      "6   6 00919 群益台灣精選高息 87,611,654 37,726 21.03 21.35...\n",
-      "7   7 00878 國泰永續高股息 81,124,835 42,166 20.80 21.05 ...\n",
-      "8   8 2887 台新金 75,770,937 13,778 16.20 16.45 16.15...\n",
-      "9   9 00982A 主動群益台灣強棒 69,889,634 6,821 11.59 11.84...\n",
-      "10  10 00632R 元大台灣50反1 67,397,939 7,242 20.80 20.8...\n",
-      "11  11 2317 鴻海 65,361,707 51,454 175.00 181.50 175...\n",
-      "12  12 2027 大成鋼 65,146,024 29,347 39.00 39.70 38.0...\n",
-      "13  13 00981A 主動統一台股增長 57,805,708 8,292 11.85 12.1...\n",
-      "14  14 3715 定穎投控 57,369,468 68,450 77.30 86.90 77....\n",
-      "15  15 2887I 台新辛特 55,529,467 4,197 8.94 9.06 8.93 ...\n",
-      "16  16 00637L 元大滬深300正2 50,785,562 6,159 15.96 16....\n",
-      "17  17 1301 台塑 50,445,289 27,806 41.80 42.25 40.60...\n",
-      "18  18 3481 群創 49,891,017 11,260 11.40 11.45 11.25...\n",
-      "19  19 4916 事欣科 49,176,384 30,842 55.00 60.50 54.7...\n",
-      "20  20 3706 神達 49,034,708 30,164 75.00 78.50 74.60...\n"
+      "    0       1          2            3       4       5       6       7   \\\n",
+      "0   排名    證券代號       證券名稱         成交股數    成交筆數     開盤價     最高價     最低價   \n",
+      "1    1    1802         台玻  258,815,942  80,459   23.65   25.50   23.50   \n",
+      "2    2    1303         南亞  147,581,228  61,089   39.80   41.70   39.45   \n",
+      "3    3    8021         尖點  103,394,657  60,008   61.90   69.00   61.80   \n",
+      "4    4    0050     元大台灣50  103,281,333  89,437   50.80   51.20   50.65   \n",
+      "5    5    1504         東元   96,068,632  45,135   54.40   56.10   53.80   \n",
+      "6    6   00919   群益台灣精選高息   87,611,654  37,726   21.03   21.35   21.00   \n",
+      "7    7   00878    國泰永續高股息   81,124,835  42,166   20.80   21.05   20.72   \n",
+      "8    8    2887        台新金   75,770,937  13,778   16.20   16.45   16.15   \n",
+      "9    9  00982A   主動群益台灣強棒   69,889,634   6,821   11.59   11.84   11.59   \n",
+      "10  10  00632R   元大台灣50反1   67,397,939   7,242   20.80   20.80   20.56   \n",
+      "11  11    2317         鴻海   65,361,707  51,454  175.00  181.50  175.00   \n",
+      "12  12    2027        大成鋼   65,146,024  29,347   39.00   39.70   38.00   \n",
+      "13  13  00981A   主動統一台股增長   57,805,708   8,292   11.85   12.12   11.84   \n",
+      "14  14    3715       定穎投控   57,369,468  68,450   77.30   86.90   77.30   \n",
+      "15  15   2887I       台新辛特   55,529,467   4,197    8.94    9.06    8.93   \n",
+      "16  16  00637L  元大滬深300正2   50,785,562   6,159   15.96   16.12   15.78   \n",
+      "17  17    1301         台塑   50,445,289  27,806   41.80   42.25   40.60   \n",
+      "18  18    3481         群創   49,891,017  11,260   11.40   11.45   11.25   \n",
+      "19  19    4916        事欣科   49,176,384  30,842   55.00   60.50   54.70   \n",
+      "20  20    3706         神達   49,034,708  30,164   75.00   78.50   74.60   \n",
+      "\n",
+      "        8        9     10      11      12  \n",
+      "0      收盤價  漲跌(+/-)  漲跌價差  最後揭示買價  最後揭示賣價  \n",
+      "1    25.00        +  1.10   25.00   25.05  \n",
+      "2    39.80        -  1.15   39.80   39.85  \n",
+      "3    66.00        +  2.80   66.00   66.10  \n",
+      "4    51.10        -  0.45   51.10   51.15  \n",
+      "5    56.10        +  5.10   56.10    0.00  \n",
+      "6    21.32        +  0.02   21.31   21.32  \n",
+      "7    21.05           0.00   21.04   21.05  \n",
+      "8    16.35           0.00   16.35   16.40  \n",
+      "9    11.81        +  0.05   11.81   11.82  \n",
+      "10   20.61        +  0.19   20.60   20.61  \n",
+      "11  181.50        +  3.50  181.50  182.00  \n",
+      "12   38.90        -  0.40   38.90   38.95  \n",
+      "13   12.07        +  0.01   12.07   12.08  \n",
+      "14   85.90        +  6.90   85.80   85.90  \n",
+      "15    9.02        +  0.09    9.02    9.03  \n",
+      "16   15.78        -  0.33   15.78   15.79  \n",
+      "17   40.70        -  1.95   40.70   40.75  \n",
+      "18   11.30        -  0.25   11.25   11.30  \n",
+      "19   60.50        +  5.50   60.50    0.00  \n",
+      "20   77.50        +  0.90   77.50   77.60  \n"
      ]
     }
    ],
@@ -54,10 +77,32 @@
     "\n",
     "content = driver.find_element(By.TAG_NAME,\"table\")\n",
     "\n",
-    "rows = content.find_elements(By.TAG_NAME,\"tr\")\n",
+    "rows_tr = driver.find_elements(By.TAG_NAME,\"tr\")\n",
     "\n",
-    "data = [row.text for row in rows]\n",
+    "data = []\n",
     "\n",
+    "for row_tr in rows_tr :\n",
+    "\n",
+    "    rows_th = row_tr.find_elements(By.TAG_NAME,\"th\")\n",
+    "\n",
+    "    if rows_th : \n",
+    "\n",
+    "        cells_th = []\n",
+    "\n",
+    "        cells_th = [cell.text for cell in rows_th]\n",
+    "\n",
+    "        data.append(cells_th)\n",
+    "\n",
+    "    rows_td = row_tr.find_elements(By.TAG_NAME,\"td\")\n",
+    "\n",
+    "    if rows_td : \n",
+    "\n",
+    "        cells_td = []\n",
+    "\n",
+    "        cells_td = [cell.text for cell in rows_td]\n",
+    "\n",
+    "        data.append(cells_td)\n",
+    "    \n",
     "result = pandas.DataFrame(data)\n",
     "\n",
     "print(result)\n",
