--- a/爬蟲/動態爬蟲 ( Selenium )/證交所每日前20大交易資料抓取/code.ipynb
+++ b/爬蟲/動態爬蟲 ( Selenium )/證交所每日前20大交易資料抓取/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "5658fb3e",
    "metadata": {},
    "outputs": [
@@ -102,20 +102,65 @@
     "        cells_td = [cell.text for cell in rows_td]\n",
     "\n",
     "        data.append(cells_td)\n",
-    "    \n",
+    "\n",
+    "# 第一種方法儲存成 csv 檔 : pandas module\n",
+    "\n",
     "result = pandas.DataFrame(data)\n",
     "\n",
     "print(result)\n",
     "\n",
-    "result.to_csv(\"output.csv\",index=False)\n"
+    "result.to_csv(\"output.csv\",encoding=\"utf-8-sig\",index=False)\n",
+    "\n",
+    "# 第二種方法儲存成 csv 檔 : csv module\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "with open(\"output_2.csv\",\"w\",encoding=\"utf-8-sig\",newline=\"\") as file : \n",
+    "\n",
+    "    writer = csv.writer(file)\n",
+    "\n",
+    "    writer.writerows(data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "76564b2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                114年08月01日成交量前二十名證券\n",
+      "排名                               證券代號      證券名稱      成交股數        成交筆數   開盤價    最高價    最低價    收盤價    漲跌(+/-) 漲跌價差 最後揭示買價 最後揭示賣價                  NaN\n",
+      "1                                1802      台玻        258,815,942 80,459 23.65  25.50  23.50  25.00  +       1.10 25.00  25.05                   NaN\n",
+      "2                                1303      南亞        147,581,228 61,089 39.80  41.70  39.45  39.80  -       1.15 39.80  39.85                   NaN\n",
+      "3                                8021      尖點        103,394,657 60,008 61.90  69.00  61.80  66.00  +       2.80 66.00  66.10                   NaN\n",
+      "4                                =\"0050\"   元大台灣50    103,281,333 89,437 50.80  51.20  50.65  51.10  -       0.45 51.10  51.15                   NaN\n",
+      "5                                1504      東元        96,068,632  45,135 54.40  56.10  53.80  56.10  +       5.10 56.10  0.00                    NaN\n",
+      "6                                =\"00919\"  群益台灣精選高息  87,611,654  37,726 21.03  21.35  21.00  21.32  +       0.02 21.31  21.32                   NaN\n",
+      "7                                =\"00878\"  國泰永續高股息   81,124,835  42,166 20.80  21.05  20.72  21.05  NaN     0.00 21.04  21.05                   NaN\n",
+      "8                                2887      台新金       75,770,937  13,778 16.20  16.45  16.15  16.35  NaN     0.00 16.35  16.40                   NaN\n",
+      "9                                =\"00982A\" 主動群益台灣強棒  69,889,634  6,821  11.59  11.84  11.59  11.81  +       0.05 11.81  11.82                   NaN\n",
+      "10                               =\"00632R\" 元大台灣50反1  67,397,939  7,242  20.80  20.80  20.56  20.61  +       0.19 20.60  20.61                   NaN\n",
+      "11                               2317      鴻海        65,361,707  51,454 175.00 181.50 175.00 181.50 +       3.50 181.50 182.00                  NaN\n",
+      "12                               2027      大成鋼       65,146,024  29,347 39.00  39.70  38.00  38.90  -       0.40 38.90  38.95                   NaN\n",
+      "13                               =\"00981A\" 主動統一台股增長  57,805,708  8,292  11.85  12.12  11.84  12.07  +       0.01 12.07  12.08                   NaN\n",
+      "14                               3715      定穎投控      57,369,468  68,450 77.30  86.90  77.30  85.90  +       6.90 85.80  85.90                   NaN\n",
+      "15                               2887I     台新辛特      55,529,467  4,197  8.94   9.06   8.93   9.02   +       0.09 9.02   9.03                    NaN\n",
+      "16                               =\"00637L\" 元大滬深300正2 50,785,562  6,159  15.96  16.12  15.78  15.78  -       0.33 15.78  15.79                   NaN\n",
+      "17                               1301      台塑        50,445,289  27,806 41.80  42.25  40.60  40.70  -       1.95 40.70  40.75                   NaN\n",
+      "18                               3481      群創        49,891,017  11,260 11.40  11.45  11.25  11.30  -       0.25 11.25  11.30                   NaN\n",
+      "19                               4916      事欣科       49,176,384  30,842 55.00  60.50  54.70  60.50  +       5.50 60.50  0.00                    NaN\n",
+      "20                               3706      神達        49,034,708  30,164 75.00  78.50  74.60  77.50  +       0.90 77.50  77.60                   NaN\n",
+      "說明:                              NaN       NaN       NaN         NaN    NaN    NaN    NaN    NaN    NaN     NaN  NaN    NaN                     NaN\n",
+      "符號說明:+/-/X表示漲/跌/不比價              NaN       NaN       NaN         NaN    NaN    NaN    NaN    NaN    NaN     NaN  NaN    NaN                     NaN\n",
+      "本統計資訊含一般、零股、盤後定價，不含鉅額、拍賣、標購。     NaN       NaN       NaN         NaN    NaN    NaN    NaN    NaN    NaN     NaN  NaN    NaN                     NaN\n",
+      "ETF證券代號第六碼為K、M、S、C者，表示該ETF以外幣交易。 NaN       NaN       NaN         NaN    NaN    NaN    NaN    NaN    NaN     NaN  NaN    NaN                     NaN\n"
+     ]
+    }
+   ],
    "source": [
     "# 另外一種做法，用 selenium 點選下載按鈕並下載 csv 檔，並額外使用 glob , os , pandas 模組，抓取下載資料路徑並讀取出來\n",
     "\n",
