新增下載多日證交所資料功能

--- a/python 模組使用練習/os , glob 模組.ipynb
+++ b/python 模組使用練習/os , glob 模組.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "767ef05c",
    "metadata": {},
    "outputs": [
@@ -11,13 +11,14 @@
      "output_type": "stream",
      "text": [
       "d:\\Python\\python 模組使用練習\n",
+      "['20250802.csv', 'write.csv', 'write_2.csv', 'write_3.csv', 'write_4.csv', 'write_5.csv', 'write_6.csv', 'write_7.csv']\n",
       "d:\\Python\\python 模組使用練習\\os , glob 模組.ipynb\n",
       "<class 'float'>\n",
       "1754136917.2735827\n",
-      "1754139692.8336728\n",
+      "1754235192.4863787\n",
       "['datetime 模組.ipynb', 'open . csv 模組.ipynb', 'os , glob 模組.ipynb']\n",
       "['d:\\\\Python\\\\python 模組使用練習\\\\datetime 模組.ipynb', 'd:\\\\Python\\\\python 模組使用練習\\\\open . csv 模組.ipynb', 'd:\\\\Python\\\\python 模組使用練習\\\\os , glob 模組.ipynb']\n",
-      "['d:\\\\Python\\\\python 模組使用練習\\\\20250802.csv']\n"
+      "[]\n"
      ]
     }
    ],
@@ -31,6 +32,12 @@
     "path = os.getcwd()\n",
     "\n",
     "print(path)\n",
+    "\n",
+    "# 取得資料夾裡面所有檔案名稱\n",
+    "\n",
+    "content = os.listdir(\"data & output\")\n",
+    "\n",
+    "print(content)\n",
     "\n",
     "# 連接檔案形成完整路徑\n",
     "\n",
