--- a/爬蟲/動態爬蟲 ( Selenium )/證交所每日前20大交易資料抓取/code.ipynb
+++ b/爬蟲/動態爬蟲 ( Selenium )/證交所每日前20大交易資料抓取/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "5658fb3e",
    "metadata": {},
    "outputs": [
@@ -72,8 +72,10 @@
     "\n",
     "driver.get(\"https://www.twse.com.tw/zh/trading/historical/mi-stock20.html\")\n",
     "\n",
+    "# 因為周末使用會導致網頁閃一下自動導回到平日，變成有透過 javascript 來傳資料，所以要改成 visibility \n",
+    "\n",
     "wait = WebDriverWait(driver,5)\n",
-    "wait.until(expected_conditions.presence_of_element_located((By.ID,\"reports\")))\n",
+    "wait.until(expected_conditions.visibility_of_element_located((By.ID,\"reports\")))\n",
     "\n",
     "content = driver.find_element(By.TAG_NAME,\"table\")\n",
     "\n",
@@ -109,13 +111,13 @@
     "\n",
     "print(result)\n",
     "\n",
-    "result.to_csv(\"output.csv\",encoding=\"utf-8-sig\",index=False)\n",
+    "result.to_csv(\"output/result.csv\",encoding=\"utf-8-sig\",index=False)\n",
     "\n",
     "# 第二種方法儲存成 csv 檔 : csv module\n",
     "\n",
     "import csv\n",
     "\n",
-    "with open(\"output_2.csv\",\"w\",encoding=\"utf-8-sig\",newline=\"\") as file : \n",
+    "with open(\"output/result_2.csv\",\"w\",encoding=\"utf-8-sig\",newline=\"\") as file : \n",
     "\n",
     "    writer = csv.writer(file)\n",
     "\n",
@@ -196,6 +198,148 @@
     "csv = pandas.read_csv(latest_file,encoding=\"big5\")\n",
     "\n",
     "print(csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45fbdfe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 用 selenium 的 Select 方法來對下拉是選單操作，以選擇下載日期 \n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions\n",
+    "from selenium.webdriver.support.ui import Select\n",
+    "from datetime import date , timedelta\n",
+    "import csv\n",
+    "import time\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "driver.get(\"https://www.twse.com.tw/zh/trading/historical/mi-stock20.html\")\n",
+    "\n",
+    "# 可以在執行方法時才抓取元素\n",
+    "\n",
+    "# 1. 選擇日期的方法\n",
+    "\n",
+    "def select_date(date) : \n",
+    "\n",
+    "    select = driver.find_element(By.CLASS_NAME,\"selects\")\n",
+    "\n",
+    "    selects = select.find_elements(By.TAG_NAME,\"select\")\n",
+    "\n",
+    "    # 以 select_by_value 來選擇 select 標籤底下的 option 字串值\n",
+    "\n",
+    "    year_select = Select(selects[0])\n",
+    "\n",
+    "    year_select.select_by_value(str(date.year))\n",
+    "\n",
+    "    month_select = Select(selects[1])\n",
+    "\n",
+    "    month_select.select_by_value(str(date.month))\n",
+    "\n",
+    "    day_select = Select(selects[2])\n",
+    "\n",
+    "    day_select.select_by_value(str(date.day))\n",
+    "\n",
+    "    submit = driver.find_element(By.CLASS_NAME,\"submit\")\n",
+    "\n",
+    "    # 檢查 web 元素是甚麼的方法 :\n",
+    "\n",
+    "    # print(submit.get_attribute(\"outerHTML\"))\n",
+    "\n",
+    "    # print(submit.get_attribute(\"innerHTML\"))\n",
+    "\n",
+    "    # print(submit.text)\n",
+    "\n",
+    "    search = submit.find_element(By.CLASS_NAME,\"search\")\n",
+    "\n",
+    "    search.click()\n",
+    "\n",
+    "# 2. 下載資料的方法\n",
+    "\n",
+    "def download_data() : \n",
+    "\n",
+    "    data = []\n",
+    "\n",
+    "    # 因為可能是周末或假日沒有資料，因此要用 try 來處理\n",
+    "\n",
+    "    try : \n",
+    "\n",
+    "        wait = WebDriverWait(driver,5)\n",
+    "        wait.until(expected_conditions.visibility_of_element_located((By.TAG_NAME,\"table\")))\n",
+    "\n",
+    "        table = driver.find_element(By.TAG_NAME,\"table\")\n",
+    "\n",
+    "        rows = table.find_elements(By.TAG_NAME,\"tr\")\n",
+    "\n",
+    "        for row in rows : \n",
+    "\n",
+    "            th_rows = row.find_elements(By.TAG_NAME,\"th\")\n",
+    "\n",
+    "            if th_rows : \n",
+    "\n",
+    "                th_row = []\n",
+    "\n",
+    "                th_row = [th_cell.text for th_cell in th_rows]\n",
+    "\n",
+    "                data.append(th_row)\n",
+    "\n",
+    "            td_rows = row.find_elements(By.TAG_NAME,\"td\")\n",
+    "\n",
+    "            if td_rows : \n",
+    "\n",
+    "                td_row = []\n",
+    "\n",
+    "                td_row = [td_cell.text for td_cell in td_rows]\n",
+    "\n",
+    "                data.append(td_row)\n",
+    "\n",
+    "        return data\n",
+    "    \n",
+    "    except :\n",
+    "\n",
+    "        return data\n",
+    "    \n",
+    "    \n",
+    "# 做一個可以下載 N 天交易日資料 ( 跳過假日和非交易日 ) 的功能\n",
+    "\n",
+    "input_date = date.today()\n",
+    "\n",
+    "N = 5 \n",
+    "\n",
+    "Download_time = 0\n",
+    "\n",
+    "while Download_time < N : \n",
+    "\n",
+    "    if input_date.weekday() < 5 :\n",
+    "\n",
+    "        select_date(input_date)\n",
+    "\n",
+    "        result = download_data()\n",
+    "\n",
+    "        if result == [] :\n",
+    "\n",
+    "            N += 1\n",
+    "\n",
+    "            input_date = input_date - timedelta(days=1)\n",
+    "\n",
+    "            break        \n",
+    "\n",
+    "        with open(f\"output/download_{input_date.year}{input_date.month:02d}{input_date.day:02d}.csv\",\"w\",encoding=\"utf-8-sig\",newline=\"\") as file : \n",
+    "\n",
+    "            writer = csv.writer(file)\n",
+    "\n",
+    "            writer.writerows(result)\n",
+    "\n",
+    "        Download_time += 1\n",
+    "\n",
+    "    input_date = input_date - timedelta(days=1)\n",
+    "\n"
    ]
   }
  ],
