新增三大法人每日資料抓取

--- a/爬蟲/動態爬蟲 ( Selenium )/證交所每日前20大交易資料抓取/code.ipynb
+++ b/爬蟲/動態爬蟲 ( Selenium )/證交所每日前20大交易資料抓取/code.ipynb
@@ -324,13 +324,9 @@
     "\n",
     "        if result == [] :\n",
     "\n",
-    "            N += 1\n",
-    "\n",
-    "            input_date = input_date - timedelta(days=1)\n",
-    "\n",
     "            break        \n",
     "\n",
-    "        with open(f\"output/download_{input_date.year}{input_date.month:02d}{input_date.day:02d}.csv\",\"w\",encoding=\"utf-8-sig\",newline=\"\") as file : \n",
+    "        with open(f\"output/download/{input_date.year}{input_date.month:02d}{input_date.day:02d}.csv\",\"w\",encoding=\"utf-8-sig\",newline=\"\") as file : \n",
     "\n",
     "            writer = csv.writer(file)\n",
     "\n",
