修改模組練習以及修改完成爬蟲畫圖問題

--- a/python 模組使用練習/datetime 模組.ipynb
+++ b/python 模組使用練習/datetime 模組.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "print(string_date)\n",
     "\n",
-    "# 把文字轉成日期，以利日期運算\n",
+    "# 把文字轉成日期，以利日期運算 ( 後面的格式是輸入的格式，不是輸出的，strftime 才是輸出的 )\n",
     "\n",
     "datetime_date = datetime.strptime(string_date,\"%Y/%m/%d\")\n",
     "\n",
