--- a/python 模組使用練習/os , glob 模組.ipynb
+++ b/python 模組使用練習/os , glob 模組.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "767ef05c",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,9 @@
     "\n",
     "print(join_path)\n",
     "\n",
-    "# 取得檔案的建立時間 ( * 輸出是 float 數字，不是 datetime 型別 )\n",
+    "# 取得檔案的建立時間 \n",
+    "\n",
+    "# ( * 輸出是 float 數字，不是 datetime 型別，可以用 datetime.datetime.fromtimestamp() 轉換回來 )\n",
     "\n",
     "create_time = os.path.getctime(join_path)\n",
     "\n",
@@ -62,8 +64,6 @@
     "# 於指定路徑下建立新資料夾\n",
     "\n",
     "os.makedirs(os.path.join(path,\"example\") , exist_ok=True)\n",
-    "\n",
-    "\n",
     "\n",
     "# glob 為搜尋檔案並產生檔名或完整檔案路徑 list 的模組 ( * 常常搭配萬用符號 * 來搜尋檔案 )\n",
     "\n",
