新增三個模組練習以及修改部分檔案

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -494,6 +494,10 @@
     "\n",
     "# e. 合併條件篩選 ( 用 isin , 基本上就是指定多個群組 == [ ... , ... ] 的操作 , 只是不能這樣做所以用 isin )\n",
     "\n",
+    "# 條件篩選就是用條件運算子 , 像是 == , > , < , != ( 排除資料可以用 ) 等等 , \n",
+    "\n",
+    "# isin 也是條件運算子 , 可產生布林值 , 只是代替 == [ ... , ... ] 而已\n",
+    "\n",
     "combine_multi_isin_row = combine[(combine[\"日期\"]>\"2025-08-01\")&(combine[\"單位名稱\"].isin([\"投信\",\"合計\"]))]\n",
     "\n",
     "print(combine_multi_isin_row)\n",
