修改 PyMySQL 模組程式碼

--- a/python 模組使用練習/PyMySQL 模組.ipynb
+++ b/python 模組使用練習/PyMySQL 模組.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "e750401f",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['\\ufeffSeq', '年度', '家數', '實際住用客房數', '可供住用客房數', '住用率']\n",
-      "['1', '2017', '12', '897389', '1443836', '62.15']\n",
-      "['2', '2018', '12', '853837', '1502714', '56.82']\n",
-      "['3', '2019', '11', '914766', '1387994', '65.91']\n",
-      "['4', '2020', '10', '493418', '1192606', '41.37']\n",
-      "['5', '2021', '11', '468923', '1442085', '32.52']\n",
-      "['6', '2022', '11', '652625', '1441385', '45.28']\n",
-      "['7', '2023', '10', '706827', '1284195', '55.04']\n",
-      "['8', '2024', '10', '708812', '1276212', '55.54']\n",
-      "變動失敗 (1062, \"Duplicate entry '\\ufeffSeq' for key 'new_table.PRIMARY'\")\n"
+      "('8', '2024', '10', '708812', '1276212', '55.54')\n",
+      "('7', '2023', '10', '706827', '1284195', '55.04')\n",
+      "('6', '2022', '11', '652625', '1441385', '45.28')\n",
+      "('5', '2021', '11', '468923', '1442085', '32.52')\n",
+      "('4', '2020', '10', '493418', '1192606', '41.37')\n",
+      "('3', '2019', '11', '914766', '1387994', '65.91')\n",
+      "('2', '2018', '12', '853837', '1502714', '56.82')\n",
+      "('1', '2017', '12', '897389', '1443836', '62.15')\n"
      ]
     }
    ],
@@ -42,11 +40,11 @@
     "\n",
     "data_column , *data_row = csv_file\n",
     "\n",
-    "print(data_column)\n",
+    "# print(data_column)\n",
     "\n",
-    "for row in data_row : \n",
+    "# for row in data_row : \n",
     "\n",
-    "    print(row)\n",
+    "#     print(row)\n",
     "\n",
     "\n",
     "\n",
@@ -77,7 +75,7 @@
     "\n",
     "try : \n",
     "\n",
-    "    cursor.executemany(sql,csv_file)\n",
+    "    result = cursor.executemany(sql,data_row)\n",
     "\n",
     "    connection.commit()\n",
     "\n",
@@ -86,6 +84,10 @@
     "    connection.rollback()\n",
     "\n",
     "    print(\"變動失敗\",e)\n",
+    "\n",
+    "    cursor.close()\n",
+    "\n",
+    "    connection.close()\n",
     "\n",
     "# 記得要把連線關掉，不然資料庫會不能做任何執行動作\n",
     "\n",
@@ -109,9 +111,9 @@
     "\n",
     "cursor = connection.cursor()\n",
     "\n",
-    "# 打 SQL 語言的查詢命令\n",
+    "# 打 SQL 語言的查詢命令 ( 用之前得到的筆數來查詢最後幾筆是不是那些資料 )\n",
     "\n",
-    "sql = \"SELECT * FROM new_table\"\n",
+    "sql = f\"SELECT * FROM new_table ORDER BY Seq DESC LIMIT {result}\"\n",
     "\n",
     "# 再做 execute 和抓資料 fetch \n",
     "\n",
