新增櫃買前30大漲幅股票爬蟲及儲存操作

--- a/python 模組使用練習/PyMySQL 模組.ipynb
+++ b/python 模組使用練習/PyMySQL 模組.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "e750401f",
    "metadata": {},
    "outputs": [
@@ -290,9 +290,7 @@
     "\n",
     "    print(\"寫入失敗\",e)\n",
     "\n",
-    "    cursor.close()\n",
-    "\n",
-    "    connection.close()\n",
+    "    connection.rollback()\n",
     "\n",
     "cursor.close()\n",
     "\n",
